# athenacore

./: .gitignore  README.md  pyproject.toml
athenacore/: isa.py
athenacore/units/: adder.py  compare.py  decoder.py  logic.py  shifter.py
tests/units/: adder_test.py  compare_test.py  decoder_test.py  logic_test.py  shiter_test.py
